===== 1.9.5 (Jan ??, 2014) =====
* Fixed back button behaviour
* Fixed recent books list
* Fixed possible crash in YotaPhone back screen service
* New config subsystem implementation
* Updated Czech localization (by Marek Pavelka)
* Separate build for Kindle Fire HD(X) devices

===== 1.9.4 (Dec 23, 2013) =====
* YotaPhone back screen support
* Fullscreen mode in android 4.4 is now optional
* New option: adjust image color according background. For light background, adjusts too light colors to match background, for dark background adjusts too dark areas.
* Updated Czech localization (by Marek Pavelka)
* It is possible to load fonts from assets; PT Sans font added in ics version

===== 1.9.3 (Nov 22, 2013) =====
* Added Greek localization (by Alex Doulamis)
* Updated Chinese localization (by Chris Yu)
* Updated Catalan localization (by Alfonso Montero)
* Litres: don't fail on loading of purchased books list (for large collections).
* Immersive fullscreen mode on android 4.4 devices

===== 1.9.2 (Nov 02, 2013) =====
* Fixed adding of new books to the library

===== 1.9.1 (Nov 01, 2013) =====
* hi-res launcher icon
* Updated Catalan localization (by Carles Pastor i Badosa)
* Updated Czech localization (by Marek Pavelka)
* mobi: blockquote tag support
* fixed cancel menu "jump back" item behaviour: returns exactly to the old position
* fixed book info saving

===== 1.9 (Oct 14, 2013) =====
* Dictionary support
	** added OpenDictionary support (code provided by Paragon Software), better integration with SlovoEd dictionaries
	** fixed ColorDict 3 integration
	** added Lingvo integration
* Network library
	** Disable/enable separate catalogs
	** Change order of catalogs
	** Fixed unexpected 'Catalog is empty' messages
* Formats
	** mobi: added support for <div> & <mbp:pagebreak> tags
	** ePub: fixed reading of files generated from LibreOffice
	** ePub: no empty paragraphs before/after the cover
	** RTF: added unicode symbols (\u command) support
* Localizations